juste de UUIDs e configuração de docs de erro